--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,9 +7,9 @@ on:
   push:
     tags:
       - 'v*'
-  pull_request:
-    branches:
-      - main
+  #  pull_request:
+    # branches:
+      # - main
 
 jobs:
   build:
