--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,20 @@
 import org.apache.tools.ant.taskdefs.condition.Os
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+      classpath 'org.codehaus.groovy:groovy-all:3.0.13'
+      classpath files('lib/badass-jlink-plugin-2.25.0.jar')
+    }
+}
+
 plugins{
     id 'application'
-    id "org.beryx.jlink" version "2.25.0"
 }
+
+apply(plugin: 'org.beryx.jlink')
 
 group 'com.opengg'
 version '0.3.4'
